[project]
name = "wormgas"
version = "2025.1"
description = "Discord bot for rainwave.cc"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.7.1",
    "fort>=2026.0",
    "notch>=2026.0",
    "stemming>=1.0.1",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "ty>=0.0.42",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
